Added image uploads

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "invitefoos",
+  "name": "Riddlr",
   "version": "1.0.0",
-  "description": "Send an invite to play foos... JAMstack demo site inspired by Phil Hawksworth's virtual lolly project",
+  "description": "",
   "scripts": {
     "start": "npm run dev",
     "dev": "cross-env ELEVENTY_ENV=dev eleventy",
@@ -15,13 +15,13 @@
     "cross-env": "^6.0.3"
   },
   "dependencies": {
-    "axios": "^0.19.1",
+    "axios": "^0.19.2",
     "cssnano": "^4.1.10",
     "dotenv": "^8.2.0",
-    "faunadb": "^2.10.2",
+    "faunadb": "^2.14.2",
     "fs": "0.0.1-security",
     "path": "^0.12.7",
-    "postcss": "^7.0.26",
+    "postcss": "^7.0.35",
     "postcss-color-mix": "^1.1.0",
     "postcss-import": "^12.0.1",
     "postcss-mixins": "^6.2.3",
